[gd_scene load_steps=3 format=3 uid="uid://2ei4vqct5fgr"]

[ext_resource type="Script" path="res://Scripts/client_tile.gd" id="1_wp7yl"]
[ext_resource type="PackedScene" uid="uid://dpskv36p3tjfs" path="res://Scenes/mix_displayer.tscn" id="2_nex46"]

[node name="ClientTile" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -15.5
offset_right = 33.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Client 1"
script = ExtResource("1_wp7yl")

[node name="MixDisplayer" parent="." instance=ExtResource("2_nex46")]
position = Vector2(32.5, 37.5)

[connection signal="client_mix_changed" from="." to="MixDisplayer" method="set_mix"]
[connection signal="pressed" from="." to="." method="_on_client_tile_pressed"]
